2003-05-19  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Add fnmatch.h for Windows.

2003-05-09  Derek Price  <derek@ximbiot.com>

	* xgssapi.h: #include config.h.
	(Reported by Boyd Lynn Gerber <gerberb@zenez.com>.)

2003-05-09  Derek Price  <derek@ximbiot.com>

	* system.h: Define S_ISSOCK on SCO OpenServer.

2003-05-09  Derek Price  <derek@ximbiot.com>

	* Makefile.in: Regenerated.

2003-04-30  Derek Price  <derek@ximbiot.com>

	* Makefile.in: Regenerated.

2003-04-10  Larry Jones  <lawrence.jones@eds.com>

	* Makefile.in: Regenerated.

2003-04-03  Derek Price  <derek@ximbiot.com>

	* Makefile.am (distclean-local): New target to remove fnmatch.h when
	necessary.  This should be handled by Automake, but until then...
	(Resolves issue #100
	<http://ccvs.cvshome.org/issues/show_bug.cgi?id=100> from
	Serguei E. Leontiev <Serge3lse@cvshome.org>.)

	* Makefile.in: Regenerated.

2003-03-24  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Update copyright notice.

	* Makefile.in: Regenerated.

2003-03-19  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.in: Regenerated.

2003-03-19  Derek Price  <derek@ximbiot.com>

	* Makefile.in: Regenerated.

2003-02-25  Derek Price  <derek@ximbiot.com>

	* Makefile.in: Regenerated.

2003-01-23  Larry Jones  <lawrence.jones@eds.com>

	* getdate.y: Add RCS/CVS timestamp format (Y.mm.dd.hh.mm.ss).
	* getdate.c: Regenerated.

	* wait.h (WCOREDUMP): New macro.

2002-12-27  Derek Price  <derek@ximbiot.com>

	* getdate.c: Regenerated with Bison 1.35.

2002-11-04  Derek Price  <derek@ximbiot.com>

	* getdate.y (Convert): Add comment as to the effectiveness of
	descriptive error messages.

2002-09-24  Derek Price  <derek@ximbiot.com>

	* Makefile.in: Regenerated using Automake 1.6.3.

2002-09-24  Derek Price  <derek@ximbiot.com>

	* Makefile.in: Regenerated.

2002-09-15  Larry Jones  <lawrence.jones@eds.com>

	* system.h: Add FOPEN_BINARY_READWRITE.
	(Patch submitted by Josh Lehan <cvs@krellan.com>.)
