@@ -1,5 +1,12 @@
 2003-05-19  Derek Price  <derek@ximbiot.com>
 
+	* lstat.c: New file from <https://savannah.gnu.org/projects/gnulib>.
+	* stat.c: Ditto.
+	* system.h: Define CVS_STAT and CVS_LSTAT properly when the system
+	versions of stat and lstat are broken.
+
+2003-05-19  Derek Price  <derek@ximbiot.com>
+
 	* .cvsignore: Add fnmatch.h for Windows.
 
 2003-05-09  Derek Price  <derek@ximbiot.com>
